Updated README to cover changes to the build system, including the new multi-language support.